--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom mb-4">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">📁 FileShare</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
+        </li>
+        {% if session.user_email %}
+        <li class="nav-item">
+          <a href="/logout" class="nav-link">Logout</a>
+        </li>
+        {% endif %}
+        <li class="nav-item">
+          <button id="toggle-theme" class="btn btn-sm btn-outline-secondary ms-3">🌓 Dark Mode</button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
