--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Dashboard - FileShare</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="container py-3" data-bs-theme="light">
 
